add a bit more info on index for the robots

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="author" content="Arzumy MD">
   </head>
 	<body>
+	  <p>Arzumy MD is a CTO and founding team member at SAYS.com. A rubyist and a tactical hacker. Recently built Groupon Malaysia and worked together with Pivotal Labs on Friendster.</p>
+
+	  <p>We are redirecting to his blog at <a href="http://ar.zu.my">http://ar.zu.my</a></p>
 	  <script type="text/javascript">
       window.location = "http://ar.zu.my/";
     </script>
